z-index issue cleared

--- a/src/style.css
+++ b/src/style.css
@@ -122,6 +122,7 @@ nav li a:hover::after{
         font-family:Arial, Helvetica, sans-serif;
         position: relative;
         /* width:200px; */
+        z-index: -1;
     }
     .animate-character::after{
       content:"";
@@ -129,7 +130,7 @@ nav li a:hover::after{
       z-index: 1;
       left: 0;
       height: 100%;
-      width: 70%;
+      width: 100%;
       background: #080808;
       border-left: 2px solid #FFc40a;
       animation: typing 3.5s steps(25) infinite;
@@ -138,7 +139,7 @@ nav li a:hover::after{
 @keyframes typing {
   100%{
     
-    transform: translateX(300px);
+    transform: translateX(280px);
   }
 }
 
@@ -174,7 +175,7 @@ nav li a:hover::after{
   padding-top:100px;
 }
 .indexi1{
-  /* z-index: -1; */
+  /*  */
 }
 
 
